Can't change Brush Texture Rotation without holding the Shift key. #70499

Closed
opened 2019-10-03 23:14:29 +02:00 by Zino Guerr · 10 comments

System Information
Operating system: Windows-10-10.0.1709 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.81 (sub 13), branch: master, commit date: 2019-10-03 15:50, hash: edffb0e9b1
Worked: (optional)

Short description of error
Ctrl+F for Texture Rotation no longer works like it used to. it only goes from 0 to 180° & you have to hold the Shift key to get it moving in small increments,

Exact steps for others to reproduce the error

  • Ctrl+F for texture Angle in Sculpt/Painting Modes.

[Based on the default startup or an attached .blend file (as simple as possible)]
{F7787959 size=full}

**System Information** Operating system: Windows-10-10.0.1709 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.81 (sub 13), branch: master, commit date: 2019-10-03 15:50, hash: `edffb0e9b1` Worked: (optional) **Short description of error** Ctrl+F for Texture Rotation no longer works like it used to. it only goes from 0 to 180° & you have to hold the Shift key to get it moving in small increments, **Exact steps for others to reproduce the error** * Ctrl+F for texture Angle in Sculpt/Painting Modes. [Based on the default startup or an attached .blend file (as simple as possible)] {[F7787959](https://archive.blender.org/developer/F7787959/Ang.gif) size=full}
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G

This issue was referenced by 2b55a1da50

This issue was referenced by 2b55a1da50d213b34993a00b6b4459970e82a5aa

Added subscribers: @PabloDobarro, @Frozen_Death_Knight

Added subscribers: @PabloDobarro, @Frozen_Death_Knight

I can confirm. Also, my personal keybind of holding down shift+R click to rotate my brush no longer works properly because it only rotates in 180 degrees, when it used to just rotate freely. I also have to now hold multiple modifiers simultaneously to do the same action I used to with the old system, but is now far slower.

Is this an intended change @PabloDobarro? I really don't like it if it is.

I can confirm. Also, my personal keybind of holding down shift+R click to rotate my brush no longer works properly because it only rotates in 180 degrees, when it used to just rotate freely. I also have to now hold multiple modifiers simultaneously to do the same action I used to with the old system, but is now far slower. Is this an intended change @PabloDobarro? I really don't like it if it is.
Member

Fixed in 2b55a1da50

Fixed in 2b55a1da50
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Hm, I wonder why this didnt get closed automatically?

Hm, I wonder why this didnt get closed automatically?

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-10-04 16:27:16 +02:00

Happened for #69227 as well, not sure what they have in common though. May be a phabricator bug after the latest update.

Happened for #69227 as well, not sure what they have in common though. May be a phabricator bug after the latest update.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70499
No description provided.