Fix T70499: Can't change Brush Texture Rotation without holding the Shift key.

Reviewed By: brecht

Maniphest Tasks: T70499

Differential Revision: https://developer.blender.org/D5985